--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
